fix(header): letter spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 
 .content-section {
   font-weight: 400;
-  /* fixme? */
-  letter-spacing: -0.125px;
+  /* fixme? -0.15px  */
+  letter-spacing: -0.2px;
 }
 
 .header {
